# ksdiy_korvo_demo

./: .gitignore  README.md
10.adc_button_test/: partitions.csv  sdkconfig  sdkconfig.cst816  sdkconfig.xpt2046  例程说明.txt
10.adc_button_test/main/: CMakeLists.txt  app_main.c  app_main.h
12.cherryusb_cdc/main/: CMakeLists.txt  app_main.c  usbx_cdc.c  usbx_cdc.h
12.cherryusb_esp32_rndis/: .gitmodules  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old  例程简介.txt
12.cherryusb_esp32_rndis/main/: CMakeLists.txt  app_wifi.c  app_wifi.h  cdc_rndis_template.c  main.c  usb_config.h  usbx_net.c  usbx_net.h
12.cherryusb_esp32_rndis/main/usb_cherry/CherryUSB/class/wireless/: usbd_rndis.c  usbd_rndis.h  usbh_rndis.c
12.cherryusb_esp32_rndis/main/usb_cherry/CherryUSB/osal/: usb_osal_freertos.c
12.cherryusb_esp32_rndis/main/usb_cherry/addition/: usb_cherry_platform.c
12.fast_qrcode_lvgl/: partitions.csv  sdkconfig.cst816  例程说明.txt
12.fast_qrcode_lvgl/main/: CMakeLists.txt  app_camera.c  app_camera.h  app_main.c  page_cam.c
13.cherryusb_msc_ram/: 例程说明.txt
13.cherryusb_msc_ram/main/: app_main.c  linker.lf  usb_config.h  usbx_msc.c  usbx_msc.h
14.cherryusb_msc_flash/: partitions.csv  sdkconfig copy
14.cherryusb_msc_flash/main/: CMakeLists.txt  app_main.c  usb_config.h  usbx_msc.c  usbx_msc.h
15.cherryusb_cdc_msc_ram/: CMakeLists.txt  sdkconfig
15.cherryusb_cdc_msc_ram/main/: CMakeLists.txt  app_main.c  usbx_cdc.c  usbx_cdc.h
17.cherryusb_hid_mouse/: partitions.csv  sdkconfig.old
17.cherryusb_hid_mouse/main/: CMakeLists.txt  app_main.c  usbx_demo.c  usbx_demo.h
18.cherryusb_hid_keyboard/main/: CMakeLists.txt  app_main.c  usbx_demo.c  usbx_demo.h
6.lcd_camera_lvgl_v7/: sdkconfig  sdkconfig.CST816  例程说明.txt
6.lcd_camera_lvgl_v7/main/: app_camera.c  app_main.c  app_main.h  page_cam.c  page_cam.h
esp_box/: README_cn.md
(+173 files in other folders)
