idf_component_register(SRC_DIRS

                        "."
                        "usb_cherry/addition/."
                        "usb_cherry/CherryUSB/class/cdc/."
                        "usb_cherry/CherryUSB/class/wireless/."
                        "usb_cherry/CherryUSB/class/hub/."
                        "usb_cherry/CherryUSB/osal/."
                        "usb_cherry/CherryUSB/core/."
                        "usb_cherry/CherryUSB/port/dwc2/."

                       INCLUDE_DIRS 
                       "."
                       "usb_cherry/addition/."
                       "usb_cherry/CherryUSB/class/wireless"
                       "usb_cherry/CherryUSB/class/cdc"
                       "usb_cherry/CherryUSB/class/msc"
                       "usb_cherry/CherryUSB/class/hub"
                       "usb_cherry/CherryUSB/osal"
                       "usb_cherry/CherryUSB/common"
                       "usb_cherry/CherryUSB/core"
                       "usb_cherry/CherryUSB/port/dwc2"

                       )
